<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nákupní seznam</string>
    <string name="add_existing">Vybrat položku se seznamu</string>
    <string name="send_sms">Poslat jako SMS</string>
    <string name="read_sms">Načíst nákup z SMS</string>
    <string name="add_next">Přidat položku</string>
    <string name="add_custom">Přidat vlastní položku</string>
    <string name="adding_done">Hotovo</string>
    <string name="clear_current_shopping_list">Mám nakoupeno</string>
    <string name="shopping_list_header">Váš nákup</string>
    <string name="title_activity_show_categories">Vyberte kategorii</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_show_products">Vyberte produkty</string>
    <string name="title_activity_about_application">O aplikaci</string>
    <string name="title_activity_read_sms">Vyberte SMS</string>
    <string name="add_product">Přidat</string>
    <string name="update_product">Změnit</string>
    <string name="remove_product">Odebrat</string>
    <string name="cancel">Storno</string>
    <string name="quantity_input_placeholder">Zadejte množství</string>
    <string name="product_title_input_placeholder">Zadejte název produktu</string>
    <string name="search_input_placeholder">Vyhledat</string>
    <string name="quantity_type1">ks</string>
    <string name="quantity_type2">kg</string>
    <string name="quantity_type3">dkg</string>
    <string name="quantity_type4">l</string>
    <string name="add_custom_form_header">Přidání vlastní položky</string>

    <string-array name="toast_messages">
        <item>Položka přidána</item>
        <item>Položka aktualizována</item>
        <item>Položka odebrána</item>
        <item>Seznam vymazán</item>
        <item>Zadána neplatná hodnota</item>
        <item>Nákup se nepodařilo načíst. Pravděpodobně špatný formát SMS.</item>
        <item>Položek přidáno: %1$d</item>
        <item>Položek sloučeno: %1$d</item>
        <item>Položek přidáno: %1$d\nPoložek sloučeno: %2$d</item>
        <item>Seznam vymazán\nPoložek přidáno: %1$d</item>
        <item>Seznam neobsahuje žádné položky!</item>
        <item>Nákup se nepodařilo uložit.</item>
        <item>Nákup se nepodařilo obnovit.</item>
    </string-array>

    <string name="confirm_dialog_title">Už máte vše!</string>
    <string name="confirm_dialog_message">Chcete seznam vymazat?</string>
    <string name="confirm_dialog_yes_button">Ano</string>
    <string name="confirm_dialog_no_button">Ještě ne!</string>
    <string name="delete_dialog_message">Opravdu chcete tuto položku odebrat?</string>
    <string name="delete_dialog_yes_button">Ano</string>
    <string name="delete_dialog_no_button">Ne</string>
    <string name="import_dialog_merge_button">Sloučit</string>
    <string name="import_dialog_replace_button">Nahradit</string>
    <string name="import_dialog_title">Načtení nákupu z SMS</string>
    <string name="import_dialog_message">V aplikaci již nákup existuje. Chcete ho sloučit nebo nahradit nákupem z SMS?</string>
    <string name="menu_settings">Nastavení</string>
    <string name="menu_options_about">O aplikaci</string>
    <string name="menu_options_save_list">Uložit nákup</string>
    <string name="copyright">\u00A9 2013, Radek Sukup, Jana Michnová</string>
    <string name="link">http://radeksukup.com</string>
    <string name="changelog_header">Změny v této verzi:</string>
    <string name="action_settings">Settings</string>
    <string name="no_sms">Telefon neobsahuje žádné příchozí SMS zprávy.</string>
    <string name="sms_limit">Zobrazeno posledních %1$d SMS zpráv.</string>
    <string name="back">Zpět</string>
    
    <string-array name="changelogItems">
        <item>Nákup zůstane uložen i po ukončení aplikace či po restartu telefonu.</item>
        <item>Nákup lze načíst z příchozí SMS.</item>
        <item>Položku lze ze seznamu odebrat přidržením prstu.</item>
        <item>Přidány ikonky pro lepší rozlišení mezi stavy vytváření/odškrtávání nákupu.</item>
        <item>Sjednoceny animace (přechody) mezi obrazovkama.</item>
    </string-array>

</resources>