<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutApplicationActivity" >

    <TextView
        android:id="@+id/app_name_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColorHint="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="normal" />
    
    <TextView
        android:id="@+id/changelogHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingBottom="12dp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:text="@string/changelog_header" />
    
    <TextView
        android:id="@+id/changelog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingBottom="12dp"
        android:textIsSelectable="true" />
    
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingBottom="12dp"
        android:text="@string/copyright" />
    
    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingBottom="12dp"
        android:text="@string/link" />

</LinearLayout>