<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReadSmsActivity" >
    
    <TextView
        android:id="@+id/sms_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:textSize="16sp"
        android:background="@color/light_gray"
        android:text="@string/sms_limit" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/no_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:text="@string/no_sms"
        android:visibility="gone" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="backToMainActivity" />

</LinearLayout>